tests/ui/reachable/expr_again.stderr
error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/expr_again.rs:7:9
   |
LL |           continue;
   |           -------- any code following this expression is unreachable
LL |           println!("hi");
   |           -------------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/expr_again.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

